--- a/style/style.css
+++ b/style/style.css
@@ -2,82 +2,126 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    max-width: 100%;
-    max-height: 100%;
 }
 
 body{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 900px;
+
+    min-height: 18vh;
+    margin: 0 auto;
+    padding: 0 10px;
     font-family: Verdana, Tahoma, sans-serif; 
-    background: linear-gradient(68.15deg, #6495ED 16.62%, #B0C4DE 85.61%);
+    background: linear-gradient(68.15deg, #6495ED, #B0C4DE);
 
 
 }
 
-
-
-img,.cabecalho, .cabecalho-banner{
+.cabecalho{
     display: flex;
     flex-direction: column;
     align-items: center; 
     width: 100%; 
+
+}
+
+.cabecalho-banner img{
+    display: flex;
+    align-items: center; 
+    width: 100%; 
     text-align:center;
     font-weight: 700;
+    border-radius: 0 0 15px 15px;
+}
+
+.navegacao .list{
+    display: flex; 
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100%;
+    padding-top: 30px;
+    padding-bottom: 30px;
     
 }
 
+.list-container{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+
+
+
+
+
 .navegacao, .navegacao-container, .menu{
     display: flex;
+    flex-direction: row;
     text-decoration: none;
     justify-content: space-evenly;
+    width: 100%;
+    margin-bottom: 20px;
     color:	#8B0000;
 
 }
+
+
 .navegacao-container, .menu{
     display: flex;
     text-decoration: none;
-    justify-content: space-evenly;
-    font-size: 25px;
-    gap: 20px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    font-size: 20px;
+    gap: 10px;
     margin: 10px;
+    width: 100%;
 }
 
 a{
     font-size: 15px;
-    color:#4682B4 ;
+    color:#4682B4;
 }
 
 .conteudo, .conteudo-container{
     display: flex;
-    align-items: center;
+    flex-direction: row;
+    align-items: flex-start;
+    align-content: center;
+    text-align: justify;
+    margin: 10px;
+
 }
 
 .conteudo{   
-    display: block; 
-    padding: 10px;
-    margin: 10px;
-    height: 370px;
-
-
-
+    display: flex;
+    align-items: flex-start;
+    align-content: center;
+    flex-direction: column;
+    flex-wrap: wrap;  
+    width: 100%;
+    min-height: 420px;
+    max-height: 100%;
+    
+    
 
 }
 
 .conteudo-container{
     display: block;
-    align-items: center;
+    align-items: flex-start;
     text-align: center;
-    height: 800px;
-    
-
+    width: 100%;
 }
 
 h1{
     display: flex;
     justify-content: center;
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 40px;
     padding-bottom: 10px;
 }
 
@@ -88,22 +132,33 @@ p{
 
 
 .rodape{
-    display: flex;
-    align-items: flex-end;
+    display: block;
     width: 100%;
-
+    height: 100%;
+    margin-top: 40px;
+    
 
 }
 
 .rodape-container{
-    display: flex;
-    align-items: flex-end;
-    padding: 10px;
-    width: 100%; 
+    display: block;
+    width: 100%;
     background-color:#4682B4;
+    padding: 10px;
+    padding-bottom: 30px;
+    border-radius: 15px 15px 0 0;
 }
 
 a{
     text-decoration: none;
     color: white;
+
+}
+
+@media (max-width: 700px) {
+    .navegacao-container {
+        flex-direction: column;
+        align-items: start;
+        text-align: left;
+    }
 }
