--- a/style/style.css
+++ b/style/style.css
@@ -155,11 +155,28 @@ a{
 
 }
 
-@media (max-width: 700px) {
+@media (max-width: 500px) {
+    .navegacao .list{
+        display: flex;
+        
+        
+    }
+
+    .list a, h1, p{
+        font-size: 13px;
+    }
+
+}
+
+@media (max-width: 310px) {
     .navegacao .list{
         display: flex;
         flex-wrap: wrap;
-        align-items: start;
-        text-align: left;
+        
     }
+
+    .list a, h1{
+        font-size: 10px;
+    }
+
 }
